[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/button_off.png" type="Texture" id=3]
[ext_resource path="res://sprites/button_on.png" type="Texture" id=4]
[ext_resource path="res://fonts/small.tres" type="DynamicFont" id=5]
[ext_resource path="res://objects/SkinSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Shader.tscn" type="PackedScene" id=7]
[ext_resource path="res://TitleScreen.tres" type="Theme" id=8]

[sub_resource type="Theme" id=1]

[node name="Options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_left = 320.0
margin_top = 82.0
margin_right = 960.0
margin_bottom = 638.0
rect_min_size = Vector2( 640, 0 )

[node name="Title" type="Label" parent="Center/VBox"]
margin_right = 640.0
margin_bottom = 80.0
custom_colors/font_color_shadow = Color( 0.12549, 0.12549, 0.12549, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
valign = 1

[node name="Container" type="Container" parent="Center/VBox"]
margin_top = 84.0
margin_right = 640.0
margin_bottom = 94.0
rect_min_size = Vector2( 10, 10 )

[node name="HBox" type="HBoxContainer" parent="Center/VBox"]
margin_top = 98.0
margin_right = 640.0
margin_bottom = 358.0
alignment = 1

[node name="Grid" type="GridContainer" parent="Center/VBox/HBox"]
margin_left = 196.0
margin_right = 444.0
margin_bottom = 260.0
theme = ExtResource( 8 )

[node name="CheckButton_Shader" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_right = 248.0
margin_bottom = 40.0
theme = SubResource( 1 )
text = "Use Shader"
flat = true

[node name="CheckButton_Scanlines" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_top = 44.0
margin_right = 248.0
margin_bottom = 84.0
text = "Scanlines"
flat = true

[node name="CheckButton_ScreenWarp" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_top = 88.0
margin_right = 248.0
margin_bottom = 128.0
text = "Screen Warp"

[node name="CheckButton_Glow" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_top = 132.0
margin_right = 248.0
margin_bottom = 172.0
text = "Glow"

[node name="CheckButton_Transition" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_top = 176.0
margin_right = 248.0
margin_bottom = 216.0
text = "Transition"

[node name="CheckButton_CameraShake" type="CheckButton" parent="Center/VBox/HBox/Grid"]
margin_top = 220.0
margin_right = 248.0
margin_bottom = 260.0
focus_neighbour_bottom = NodePath("../../../HBox_Visage/PlayerVisage")
text = "Camera Shake"

[node name="Button_Shader" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 44.0
margin_right = 168.0
margin_bottom = 60.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_bottom = NodePath("../Button_Scanlines")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 44.0
margin_right = 168.0
margin_bottom = 54.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_Shader" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 44.0
margin_right = 168.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 5 )
text = "Use Shader"
valign = 1

[node name="Button_Scanlines" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 88.0
margin_right = 168.0
margin_bottom = 104.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_top = NodePath("../Button_Shader")
focus_neighbour_bottom = NodePath("../Button_ScreenWarp")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container2" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 88.0
margin_right = 168.0
margin_bottom = 98.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_Scanlines" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 88.0
margin_right = 168.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 5 )
text = "Scanlines"
valign = 1

[node name="Button_ScreenWarp" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 132.0
margin_right = 168.0
margin_bottom = 148.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_top = NodePath("../Button_Scanlines")
focus_neighbour_bottom = NodePath("../Button_Glow")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container3" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 132.0
margin_right = 168.0
margin_bottom = 142.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_ScreenWarp" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 132.0
margin_right = 168.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 5 )
text = "Screen Warp"
valign = 1

[node name="Button_Glow" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 176.0
margin_right = 168.0
margin_bottom = 192.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_top = NodePath("../Button_ScreenWarp")
focus_neighbour_bottom = NodePath("../Button_Transition")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container4" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 176.0
margin_right = 168.0
margin_bottom = 186.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_Glow" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 176.0
margin_right = 168.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 5 )
text = "Glow"
valign = 1

[node name="Button_Transition" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 220.0
margin_right = 168.0
margin_bottom = 236.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_top = NodePath("../Button_Glow")
focus_neighbour_bottom = NodePath("../Button_CameraShake")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container5" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 220.0
margin_right = 168.0
margin_bottom = 230.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_Transition" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 220.0
margin_right = 168.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 5 )
text = "Transition"
valign = 1

[node name="Button_CameraShake" type="TextureButton" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 264.0
margin_right = 169.0
margin_bottom = 280.0
rect_min_size = Vector2( 16, 16 )
focus_neighbour_top = NodePath("../Button_Transition")
focus_neighbour_bottom = NodePath("../../../BackButton")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Container6" type="Container" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 264.0
margin_right = 169.0
margin_bottom = 274.0
rect_min_size = Vector2( 10, 10 )

[node name="Label_CameraShake" type="Label" parent="Center/VBox/HBox/Grid"]
visible = false
margin_top = 264.0
margin_right = 169.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 5 )
text = "Camera Shake"
valign = 1

[node name="Container2" type="Container" parent="Center/VBox"]
margin_top = 362.0
margin_right = 640.0
margin_bottom = 372.0
rect_min_size = Vector2( 10, 10 )

[node name="HBox_Visage" type="HBoxContainer" parent="Center/VBox"]
margin_top = 376.0
margin_right = 640.0
margin_bottom = 524.0
alignment = 1

[node name="PlayerVisage" parent="Center/VBox/HBox_Visage" instance=ExtResource( 6 )]
margin_left = 22.0
margin_right = 318.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../../HBox/Grid/CheckButton_CameraShake")
focus_neighbour_bottom = NodePath("../SweetheartVisage")
title = "Your Visage"
setting_label = "player_visage"

[node name="SweetheartVisage" parent="Center/VBox/HBox_Visage" instance=ExtResource( 6 )]
margin_left = 322.0
margin_right = 618.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../PlayerVisage")
focus_neighbour_bottom = NodePath("../../BackButton")
title = "Your Sweetheart's Visage"
setting_label = "sweetheart_visage"

[node name="BackButton" type="Button" parent="Center/VBox"]
margin_top = 528.0
margin_right = 640.0
margin_bottom = 556.0
focus_neighbour_top = NodePath("../HBox/Grid/CheckButton_CameraShake")
custom_fonts/font = ExtResource( 5 )
text = "Back"
flat = true

[node name="Overlay" parent="." instance=ExtResource( 7 )]

[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_Shader" to="." method="set_shader"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_Scanlines" to="." method="set_scanlines"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_ScreenWarp" to="." method="set_screen_warp"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_Glow" to="." method="set_glow"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_Transition" to="." method="set_transition"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/CheckButton_CameraShake" to="." method="set_camera_shake"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_Shader" to="." method="set_shader"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_Scanlines" to="." method="set_scanlines"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_ScreenWarp" to="." method="set_screen_warp"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_Glow" to="." method="set_glow"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_Transition" to="." method="set_transition"]
[connection signal="toggled" from="Center/VBox/HBox/Grid/Button_CameraShake" to="." method="set_camera_shake"]
[connection signal="pressed" from="Center/VBox/BackButton" to="." method="back"]
